Changelog
=========


1.6.3 (unreleased)
------------------

- Drop Plone 4.1 support. [jone]

- An older ftw.calendar is required because of breaking changes in
  https://github.com/4teamwork/ftw.calendar/pull/19 [jone]

- Replace jq with $.
  [lknoepfel]


1.6.2 (2015-09-02)
------------------

- Fix Layout for Images in MeetingItems.
  [tschanzt]


1.6.1 (2015-05-13)
------------------

- Fix invalid css, removing an unneeded closing curly bracket.
  The CSS of 1.6.0 is invalid
  [jone]


1.6.0 (2015-05-11)
------------------

- Highlighting attended meetings in `ftw.calendar`.
  [lknoepfel]


1.5.3 (2015-02-09)
------------------

- Render the related items of meeting objects.
  [mbaechtold]


1.5.2 (2014-07-31)
------------------

- BugFix: Show "related_items" instead of "relatedItems" in meeting item listing.
  [mathias.leimgruber]

- Also export references of meeting item on zip export on a meeting.
  [mathias.leimgruber]


1.5.1 (2014-07-04)
------------------

- Fix save_as_pdf view. _parent seems to be an existing method with security declaration.
  [mathias.leimgruber]

- Add special preview View for ftw.workspace preview.
  [tschanzt]

- Don't allow file upload.
  [tschanzt]


1.5.0 (2014-06-24)
------------------

- 1.4.10 was meant to be a feature release, since it has some features included.
  So this is the new feature release.
  [mathias.leimgruber]

- Ignore removed users in PDF.
  [jone]

- Fix ftw.zipexport integration: make it optional on ZCML level.
  [jone]


1.4.10 (2014-06-10)
-------------------

- Add zipexport for meetings
  [elioschmutz]

- Add functionality to save meeting as pdf without downloading it.
  [elioschmutz]


1.4.9 (2014-03-20)
------------------

- Increase height of meeting item fields.
  [jone]


1.4.8 (2014-02-10)
------------------

- Update French translations.
  [tschanzt]


1.4.7 (2013-11-20)
------------------

- Fix getting related tasks on for task latex listing.
  [mathias.leimgruber]


1.4.6 (2013-11-18)